[project]
name = "anyio-typer"
dynamic = ["version"]
description = "Combines anyio and typer together for writing asynchronous commandlines"
readme = "README.md"
authors = [
    { name = "Vizonex", email = "VizonexBusiness@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "typer>=0.16.0",
    "anyio>=4.10.0"
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"


[project.optional-dependencies]
trio = ["trio>=0.30.0"]
uvloop = [
    "uvloop>=0.21.0; sys_platform != 'win32'", 
    "winloop>=0.2.2; sys_platform == 'win32'"
]
