[project]
name = "anyio-typer"
dynamic = ["version"]
description = "Combines anyio and typer together for writing asynchronous commandlines"
readme = "README.md"
authors = [
    { name = "Vizonex", email = "VizonexBusiness@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.16.0",
    "anyio>=4.12.1",
    'typing-extensions; python_version<"3.11"',
]

[project.optional-dependencies]
trio = ["trio>=0.30.0"]
uvloop = [
    "uvloop>=0.21.0; sys_platform != 'win32'", 
    "winloop>=0.2.2; sys_platform == 'win32'"
]

[tool.setuptools.dynamic]
version = {attr = "anyio_typer.__version__"}

[build-system]
requires = ["setuptools"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
    "E",
    "W",
    "I",
    "F"
]
ignore = [
    "F405" # may be undefined, or defined from star imports (I Need these)
]
